--- a/index.html
+++ b/index.html
@@ -56,10 +56,11 @@
                  <!--  <li><a class="nav-link scrollto" href="#gallery">Gallery</a></li>-->
                   <!-- <li><a class="nav-link scrollto" href="#team">Team</a></li>-->
                  <!--  <li><a class="nav-link scrollto" href="#pricing">Pricing</a></li>-->
-      <!--      <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
+          <li><a class="nav-link scrollto" href="#contact">Contatos</a></li>
+                <li class="dropdown"><a href="#"><span>Painel do Cliente</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
+              <li><a href="https://backup.vedetta.com.br/login">Painel Backup Corporativo </a></li>
+                               <!-- <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
                 <ul>
                   <li><a href="#">Deep Drop Down 1</a></li>
                   <li><a href="#">Deep Drop Down 2</a></li>
@@ -67,13 +68,15 @@
                   <li><a href="#">Deep Drop Down 4</a></li>
                   <li><a href="#">Deep Drop Down 5</a></li>
                 </ul>
-              </li>
-              <li><a href="#">Drop Down 2</a></li>
-              <li><a href="#">Drop Down 3</a></li>
+              </li>-->
+              <li><a href="https://cloud.kaspersky.com/">Painel Antivirus Corporativo</a></li>
+              <li><a href="#">Painel de Ordens de Serviço</a></li>
               <li><a href="#">Drop Down 4</a></li>
             </ul>
-          </li>-->
-          <li><a class="nav-link scrollto" href="#contact">Contatos</a></li>
+          </li>
+
+
+
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
