--- a/index.html
+++ b/index.html
@@ -778,7 +778,7 @@
     <!-- End F.A.Q Section -->
 
     <!-- ======= Contact Section ======= -->
-    <section id="contact" class="contact">
+        <!-- <section id="contact" class="contact">
       <div class="container">
 
         <div class="section-title" data-aos="fade-up">
@@ -842,7 +842,8 @@
         </div>
 
       </div>
-    </section><!-- End Contact Section -->
+    </section>--> 
+    <!-- End Contact Section -->
 
   </main><!-- End #main -->
 
@@ -854,13 +855,13 @@
 
           <div class="col-lg-4 col-md-6">
             <div class="footer-info">
-              <h3>Bootslander</h3>
-              <p class="pb-3"><em>Qui repudiandae et eum dolores alias sed ea. Qui suscipit veniam excepturi quod.</em></p>
-              <p>
+              <h3>VEDETTA</h3>
+              <p class="pb-3"><em>Soluções em Tecnologia e Segurança da Informação</em></p>
+              <p> 
                 A108 Adam Street <br>
                 NY 535022, USA<br><br>
-                <strong>Phone:</strong> +1 5589 55488 55<br>
-                <strong>Email:</strong> info@example.com<br>
+                <strong>Phone:</strong> +55 65 3362 - 3083<br>
+                <strong>Email:</strong> sac@vedetta.com.br<br>
               </p>
               <div class="social-links mt-3">
                 <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
