--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
     </section>--> 
     <!-- End Gallery Section -->
 
-    <!-- ======= Testimonials Section ======= -->
+    <!-- ======= Testimonials Section ======= 
   <section id="testimonials" class="testimonials">
       <div class="container">
 
@@ -486,7 +486,8 @@
                 </p>
               </div>
             </div> 
-            <!-- End testimonial item -->
+
+            <!-- End testimonial item  
 
             <div class="swiper-slide">
               <div class="testimonial-item">
@@ -499,7 +500,7 @@
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
-            </div><!-- End testimonial item -->
+            </div>
 
             <div class="swiper-slide">
               <div class="testimonial-item">
@@ -512,8 +513,7 @@
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
-            </div><!-- End testimonial item -->
-
+            
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
@@ -525,7 +525,7 @@
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
-            </div><!-- End testimonial item -->
+            </div> 
 
             <div class="swiper-slide">
               <div class="testimonial-item">
@@ -538,14 +538,16 @@
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
-            </div><!-- End testimonial item -->
+            </div> 
 
           </div>
           <div class="swiper-pagination"></div>
         </div>
 
       </div>
-    </section><!-- End Testimonials Section -->
+    </section> 
+    End Testimonials Section  
+  -->
 
     <!-- ======= Team Section ======= -->
     <!--    <section id="team" class="team">
