--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Vedetta.com.br | Soluções em Tecnologia e Segurança da Informação.</title>
+  <title>Vedetta | Soluções em Tecnologia e Segurança da Informação.</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
-
+  
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/vedetta.ico" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
@@ -43,7 +43,7 @@
     <div class="container d-flex align-items-center justify-content-between">
 
       <div class="logo">
-        <h1><a href="index.html"><span>VEDETTA</span></a></h1>
+         <!--<h1><a href="index.html"><span>VEDETTA</span></a></h1>-->
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
@@ -56,11 +56,17 @@
                  <!--  <li><a class="nav-link scrollto" href="#gallery">Gallery</a></li>-->
                   <!-- <li><a class="nav-link scrollto" href="#team">Team</a></li>-->
                  <!--  <li><a class="nav-link scrollto" href="#pricing">Pricing</a></li>-->
-          <li><a class="nav-link scrollto" href="#contact">Contatos</a></li>
+          <li><a class="nav-link scrollto" href="https://api.whatsapp.com/send?phone=+556533623083&text=Ol%C3%A1%2C%20Gostaria%20de%20saber%20mais%20sobre%20os%20servi%C3%A7os%20da%20*Vedetta*%20.">Suporte</a></li> &nbsp; <img src="assets/img/whatsapp.png">
+
+
+
+
+ <!-- 
                 <li class="dropdown"><a href="#"><span>Painel do Cliente</span> <i class="bi bi-chevron-down"></i></a>
+            
             <ul>
               <li><a href="https://backup.vedetta.com.br/login">Painel Backup Corporativo </a></li>
-                               <!-- <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
+                               <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
                 <ul>
                   <li><a href="#">Deep Drop Down 1</a></li>
                   <li><a href="#">Deep Drop Down 2</a></li>
@@ -68,14 +74,14 @@
                   <li><a href="#">Deep Drop Down 4</a></li>
                   <li><a href="#">Deep Drop Down 5</a></li>
                 </ul>
-              </li>-->
+              </li> 
               <li><a href="https://cloud.kaspersky.com/">Painel Antivirus Corporativo</a></li>
               <li><a href="#">Painel de Ordens de Serviço</a></li>
               <li><a href="#">Drop Down 4</a></li>
             </ul>
-          </li>
+          </li> 
 
-
+-->
 
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -129,13 +135,12 @@
 
         <div class="row">
           <div class="col-xl-5 col-lg-6 video-box d-flex justify-content-center align-items-stretch" data-aos="fade-right">
-            <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>
+            <!--<a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>-->
           </div>
 
           <div class="col-xl-7 col-lg-6 icon-boxes d-flex flex-column align-items-stretch justify-content-center py-5 px-lg-5" data-aos="fade-left">
-            <h3>Cada cliente possui um atendimento de acordo com as suas necessidades!!!</h3>
-            <p>Atendimento customizado?SIM! Acreditamos que cada cliente tem suas particularidades e para isso criamos uma metodologia de trabalho para criar um catalogo de serviço e atendimento. </p>
-
+            <h3>Cada cliente possui um atendimento de acordo com as suas necessidades!</h3>
+            
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="100">
               <div class="icon"><i class="bx bx-fingerprint"></i></div>
               <h4 class="title"><a href="">Identificação</a></h4>
@@ -145,13 +150,13 @@
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="200">
               <div class="icon"><i class="bx bx-gift"></i></div>
               <h4 class="title"><a href="">Implementação</a></h4>
-              <p class="description">Nesta fase realizamos a correção e implantação de serviços de nossos clientes visando garantir que todas as atividades sejam realizadas com excelência. Somos parceiros dos melhores fabricantes do mercado. </p>
+              <p class="description">Nesta fase realizamos a correção e implantação de serviços de nossos clientes visando garantir que todas as atividades sejam realizadas com excelência.</p>
             </div>
 
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="300">
               <div class="icon"><i class="bx bx-atom"></i></div>
               <h4 class="title"><a href="">Suporte e Monitoramento</a></h4>
-              <p class="description">Nesta fase realizamos os procedimentos de NOC E SOC ( monitoramento de ativos de Rede e Segurança) junto ao suporte tecnico especializado para atender todas as demandas dos clientes em tempo habil, SIM!!! 24/7 </p>
+              <p class="description">Nesta fase realizamos os procedimentos de NOC e SOC (monitoramento de ativos de Rede e Segurança) junto ao suporte técnico especializado para atender todas as demandas dos clientes em tempo hábil.</p>
             </div>
 
           </div>
@@ -487,7 +492,7 @@
               </div>
             </div> 
 
-            <!-- End testimonial item  
+            End testimonial item  
 
             <div class="swiper-slide">
               <div class="testimonial-item">
@@ -722,31 +727,31 @@
 
         <div class="section-title" data-aos="fade-up">
           <h2>F.A.Q</h2>
-          <p>Perguntas e duvidas Frequentes</p>
+          <p>Perguntas e dúvidas frequentes</p>
         </div>
 
         <div class="faq-list">
           <ul>
             <li data-aos="fade-up">
-              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" class="collapse" data-bs-target="#faq-list-1">Tenho uma empresa de pequeno e médio porte os serviços ficam caros? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" class="collapse" data-bs-target="#faq-list-1">Tenho uma empresa de pequeno e médio porte, os serviços ficam caros? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-1" class="collapse show" data-bs-parent=".faq-list">
                 <p>
-                  Evidente que não! (: Sempre realizamos projetos que cabem em todos os bolsos e fazem entregas com excelência. 
+                 Sempre realizamos projetos que cabem em todos os orçamentos e fazem entregas com excelência. 
                 </p>
               </div>
             </li>
 
             <li data-aos="fade-up" data-aos-delay="100">
-              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-2" class="collapsed">Tenho duvidas em saber quais serviços minha empresa necessita! <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-2" class="collapsed">Como identificar quais serviços a minha empresa necessita? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-2" class="collapse" data-bs-parent=".faq-list">
                 <p>
-                  Entendemos perfeitamente essa "dor". Por isso levamos até você uma equipe especializada para realizar levantamento das suas necessidades, quais as tecnologias devem ser melhor empregadas, nosso proposito é cuidar da tecnologia da sua empresa enquanto isso você cuida do seu negócio. 
+                    Levamos até você uma equipe especializada para realizar o levantamento das suas necessidades, quais as tecnologias devem ser melhor empregadas. Nosso propósito é cuidar da tecnologia da sua empresa enquanto você cuida do seu negócio. 
                 </p>
               </div>
             </li>
 
             <li data-aos="fade-up" data-aos-delay="200">
-              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-3" class="collapsed">Não quero contratar todos os serviços propostos, necessito apenas de x serviços. <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-3" class="collapsed">Não quero contratar todos os serviços propostos, necessito apenas de X serviços. Como proceder?  <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-3" class="collapse" data-bs-parent=".faq-list">
                 <p>
                   Entendemos que cada negócio tem suas particularidades por isso sempre trabalhamos por projetos, para que uma atividade por vez seja executada até chegar a melhoria e desempenho ideal da sua organização.
@@ -755,13 +760,25 @@
             </li>
 
             <li data-aos="fade-up" data-aos-delay="300">
-              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-4" class="collapsed">Como funciona esse suporte? eu posso chamar sempre que precisar? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-4" class="collapsed">Como funciona esse suporte? Posso chamar sempre que precisar?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-4" class="collapse" data-bs-parent=".faq-list">
                 <p>
-                Com CERTEZA! (: Tem clientes que precisam de atendimento 24/7 ou apenas em horário comercial, para isso possuímos um sla de atendimento de acordo com seu negócio.
+                Sim, existem clientes que necessitam de atendimento avulso, atendimento mensal e atendimento 24x7, para isso possuímos um SLA de atendimento de acordo com seu negócio.
                 </p>
               </div>
             </li>
+
+            <li data-aos="fade-up" data-aos-delay="300">
+              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-4" class="collapsed">Como solicito uma visita técnica?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+              <div id="faq-list-4" class="collapse" data-bs-parent=".faq-list">
+                <p>
+                Você pode entra em contato através de nossos canais de comunicação: 
+                <br>Telefone Corporativo e Whatsapp: 65 3362-3083</br>
+                 Email: sac@vedetta.com.br
+                </p>
+              </div>
+            </li>
+
 
             <!-- <li data-aos="fade-up" data-aos-delay="400">
               <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-5" class="collapsed">Tortor vitae purus faucibus ornare. Varius vel pharetra vel turpis nunc eget lorem dolor? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
