--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 						<li class="nav-item">
 							<a class="nav-link" href="#projects">Projetos</a>
 						</li>
-						<!-- <li class="nav-item">
+						<li class="nav-item">
 							<a class="nav-link" href="#testimonial">Clientes</a>
-						</li> -->
+						</li>
 						<!-- <li class="nav-item">
 							<a class="nav-link" href="#plans">Planos</a>
 						</li> -->
@@ -74,7 +74,7 @@
 											<br />
 											<b>Planos a partir de R$ 250 ao mês.</b>
 										</p>
-										<a href="#" class="btn btn-secondary mt-3">Saiba mais</a>
+										<a href="#contact" class="btn btn-secondary mt-3">Saiba mais</a>
 									</div>
 									<div class="mt-5 mt-lg-0">
 										<img src="images/group.png" alt="marsmello" class="img-fluid" data-aos="zoom-in-up">
@@ -239,9 +239,9 @@
 				<div class="container">
 					<div class="row  mt-md-0 mt-lg-4">
 						<div class="col-sm-6 text-white" data-aos="fade-up">
-							<!-- <p class="font-weight-bold mb-3">Nossos clientes</p> -->
-							<h3 class="font-weight-medium">Nossos clientes</h3>
-							<!-- <ul class="flipster-custom-nav">
+							<p class="font-weight-bold mb-3">Testemunhos</p>
+							<h3 class="font-weight-medium">Veja o que nossos clientes <br>falam de nós.</h3>
+							<ul class="flipster-custom-nav">
 								<li class="flipster-custom-nav-item">
 									<a href="javascript:;" class="flipster-custom-nav-link" title="0"></a>
 								</li>
@@ -254,9 +254,54 @@
 								<li class="flipster-custom-nav-item">
 									<a href="javascript:;" class="flipster-custom-nav-link"  title="3"></a>
 								</li>
-							</ul> -->
+							</ul>
 						</div>
-						<div class="col-sm-12" data-aos="fade-up">
+						<div class="col-sm-6" data-aos="fade-up">
+							<div id="testimonial-flipster">
+								<ul>
+									<li>
+										<div class="testimonial-item">
+											<p>Após contratar a Vedetta, não precisamos nos preocupar mais com o funcionamento dos equipamentos.
+											</p>
+											<h6 class="testimonial-author">Mirleny</h6>
+											<p class="testimonial-destination">Baronês</p>
+										</div>
+									</li>
+									<li>
+										<div class="testimonial-item">
+											<p>O atendimento mais ágil que já tivemos, basta entrar em contato por Whatsapp ou Telefone e um técnico é enviado rapidamente.
+											</p>
+											<h6 class="testimonial-author">Isabela</h6>
+											<p class="testimonial-destination">Showperia Bom Clima</p>
+										</div>
+									</li>
+									<li>
+										<div class="testimonial-item">
+											<p>Com o Backup em núvem sempre que precisamos recuperar alguma informação a Vedetta nos atende em poucos minutos.
+											</p>
+											<h6 class="testimonial-author">Daniely</h6>
+											<p class="testimonial-destination">Ostensiv Monitoramento</p>
+										</div>
+									</li>
+									<li>
+										<div class="testimonial-item">
+											<p>Quando temos problemas técnicos a Vedetta resolve em pouco tempo. Estamos extremamente satisfeitos com o Suporte 24x7.
+											</p>
+											<h6 class="testimonial-author">Priscila</h6>
+											<p class="testimonial-destination">Motéis Calla e Athos</p>
+										</div>
+									</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+		
+			<section class="clients pt-5 mt-5"  data-aos="fade-up" data-aos-offset="-400">
+				<div class="container">
+					<div class="row">
+						<div class="col-sm-12">
 							<div class="d-sm-flex justify-content-between align-items-center">
 								<img src="images/deloit.svg" alt="deloit" class="p-2 p-lg-0" data-aos="fade-down"  data-aos-offset="-400">
 								<img src="images/erricson.svg" alt="erricson" class="p-2 p-lg-0" data-aos="fade-up"  data-aos-offset="-400">
@@ -264,45 +309,6 @@
 								<img src="images/instagram.svg" alt="instagram" class="p-2 p-lg-0" data-aos="fade-up"  data-aos-offset="-400">
 								<img src="images/coinbase.svg" alt="coinbase" class="p-2 p-lg-0" data-aos="fade-down"  data-aos-offset="-400">
 							</div>
-							<!-- <div id="testimonial-flipster">
-								<ul>
-									<li>
-										<div class="testimonial-item">
-											<p>Após contratar a Vedetta, não precisamos nos preocupar mais com o funcionamento dos equipamentos.
-											</p>
-											<h6 class="testimonial-author">Mark Spenser</h6>
-											<p class="testimonial-destination">Accounts</p>
-										</div>
-									</li>
-									<li>
-										<div class="testimonial-item">
-											<p>Lorem ipsum dolor sit amet, consectetur
-												pretium pretium tempor.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut pretium
-											</p>
-											<h6 class="testimonial-author">Tua Manuera</h6>
-											<p class="testimonial-destination">Director,Dj market</p>
-										</div>
-									</li>
-									<li>
-										<div class="testimonial-item">
-											<p>Lorem ipsum dolor sit amet, consectetur
-												pretium pretium tempor.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut pretium
-											</p>
-											<h6 class="testimonial-author">Sarah Philip</h6>
-											<p class="testimonial-destination">Chief Accountant</p>
-										</div>
-									</li>
-									<li>
-										<div class="testimonial-item">
-											<p>Lorem ipsum dolor sit amet, consectetur
-												pretium pretium tempor.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut pretium
-											</p>
-											<h6 class="testimonial-author">Mark Spenser</h6>
-											<p class="testimonial-destination">Director,Dj market</p>
-										</div>
-									</li>
-								</ul>
-							</div> -->
 						</div>
 					</div>
 				</div>
@@ -359,21 +365,7 @@
 				</div>
 			</section>
 			
-			<!-- <section class="clients pt-5 mt-5"  data-aos="fade-up" data-aos-offset="-400">
-				<div class="container">
-					<div class="row">
-						<div class="col-sm-12">
-							<div class="d-sm-flex justify-content-between align-items-center">
-								<img src="images/deloit.svg" alt="deloit" class="p-2 p-lg-0" data-aos="fade-down"  data-aos-offset="-400">
-								<img src="images/erricson.svg" alt="erricson" class="p-2 p-lg-0" data-aos="fade-up"  data-aos-offset="-400">
-								<img src="images/netflix.svg" alt="netflix" class="p-2 p-lg-0" data-aos="fade-down"  data-aos-offset="-400">
-								<img src="images/instagram.svg" alt="instagram" class="p-2 p-lg-0" data-aos="fade-up"  data-aos-offset="-400">
-								<img src="images/coinbase.svg" alt="coinbase" class="p-2 p-lg-0" data-aos="fade-down"  data-aos-offset="-400">
-							</div>
-						</div>
-					</div>
-				</div>
-			</section> -->
+			
 			
 		</div>
 		<footer class="footer">
