--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
 				</div>
 			</section>
 		
-			<section class="clients pt-5 mt-5"  data-aos="fade-up" data-aos-offset="-400">
+			<!-- <section class="clients pt-5 mt-5"  data-aos="fade-up" data-aos-offset="-400">
 				<div class="container">
 					<div class="row">
 						<div class="col-sm-12">
@@ -366,7 +366,7 @@
 			<br />
 			<br />
 			<br />
-			<br />
+			<br /> -->
 			
 			
 		</div>
