--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
 									</li>
 									<li>
 										<div class="testimonial-item">
-											<p>Com o Backup em núvem sempre que precisamos recuperar alguma informação a Vedetta nos atende em poucos minutos.
+											<p>Com o Backup em nuvem sempre que precisamos recuperar alguma informação a Vedetta nos atende em poucos minutos.
 											</p>
 											<h6 class="testimonial-author">Daniely</h6>
 											<p class="testimonial-destination">Ostensiv Monitoramento</p>
