--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 										</div>
 									</div>
 									<div class="col-sm-12">
-										<a class="btn btn-secondary" onclick="saveContact">Enviar</a>
+										<a href="#" class="btn btn-secondary" id="sendbtn">Enviar</a>
 									</div>
 								</div>
 							</form>
