Correcoes de layout

--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
 										<div class="testimonial-item">
 											<p>Após contratar a Vedetta, não precisamos nos preocupar mais com o funcionamento dos equipamentos.
 											</p>
-											<h6 class="testimonial-author">Mirleny</h6>
+											<h6 class="testimonial-author">Dayanne</h6>
 											<p class="testimonial-destination">Baronês</p>
 										</div>
 									</li>
