--- a/jarbas.html
+++ b/jarbas.html
@@ -1,11 +1,16 @@
 <html> 
     <head> 
-        <title>Cardápio-Jarbas</title> 
+        <title>Cardápio Jarbas</title> 
     </head> 
     <body> 
-        <p> 
-            <embed src="http://www.vedetta.com.br//jarbas.pdf" width="760" height="500" type='application/pdf'>
-        </p> 
+            <iframe src="http://www.vedetta.com.br//jarbas.pdf"
+            frameborder="0" 
+            marginheight="0" 
+            marginwidth="0" 
+            width="100%" 
+            height="100%" 
+            scrolling="auto">
+  </iframe>
     </body> 
 </html>
 
