--- a/jarbas.html
+++ b/jarbas.html
@@ -3,14 +3,7 @@
         <title>Cardápio Jarbas</title> 
     </head> 
     <body> 
-            <iframe src="http://www.vedetta.com.br//jarbas.pdf"
-            frameborder="0" 
-            marginheight="0" 
-            marginwidth="0" 
-            width="100%" 
-            height="100%" 
-            scrolling="auto">
-  </iframe>
+  <embed src="http://www.vedetta.com.br//jarbas.pdf#toolbar=0&navpanes=0&scrollbar=0" type="application/pdf" width="100%" height="100%" />
     </body> 
 </html>
 
