--- a/jarbas.html
+++ b/jarbas.html
@@ -1,6 +1,6 @@
 <html> 
     <head> 
-        <title>Cardápio Jarbas</title> 
+        <title>Cardápio-Jarbas</title> 
     </head> 
     <body> 
   <embed src="http://www.vedetta.com.br//jarbas.pdf#toolbar=0&navpanes=0&scrollbar=0" type="application/pdf" width="100%" height="100%" />
