--- a/jarbas.html
+++ b/jarbas.html
@@ -3,7 +3,7 @@
         <title>Cardápio-.-Jarbas</title> 
     </head> 
     <body> 
-  <embed src="http://www.vedetta.com.br/jarbas.pdf#toolbar=0&navpanes=0&scrollbar=0" type="application/pdf" width="100%" height="100%" />
-    </body> 
+  <embed src="https://docs.google.com/gview?embedded=true&url=http://www.vedetta.com.br/jarbas.pdf" type="application/pdf" />
+           </body> 
 </html>
 
