--- a/jarbas.html
+++ b/jarbas.html
@@ -1,9 +1,9 @@
 <html> 
     <head> 
-        <title>Cardápio-.-Jarbas</title> 
+        <title>Cardápio.-Jarbas</title> 
     </head> 
     <body> 
-  <embed src="https://docs.google.com/gview?embedded=true&url=http://www.vedetta.com.br/jarbas.pdf" type="application/pdf" />
+        <embed src="http://www.vedetta.com.br/jarbas.pdf" type="application/pdf" width="100%" height="100%" />
            </body> 
 </html>
 
