--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 											Fornecemos assessoria especializada em tecnologia para que sua empresa não pare! 
 											<br />
 											<br />
-											<b>Planos a partir de R$ 250 ao mês.</b>
+											<!-- <b>Planos a partir de R$ 250 ao mês.</b> -->
 										</p>
 										<a href="#contact" class="btn btn-secondary mt-3">Saiba mais</a>
 									</div>
@@ -152,7 +152,7 @@
 						<div class="col-sm-4 text-center text-lg-left">
 							<div class="services-box pb-0" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1500">
 								<img src="images/saving-strategy.svg" alt="saving-strategy" data-aos="zoom-in">
-								<h6 class="text-dark mb-3 mt-4 font-weight-medium">Backup Cloud
+								<h6 class="text-dark mb-3 mt-4 font-weight-medium">Backup
 								</h6>
 								<p>Não se preocupe mais com seus dados, com o backup em nuvem sua empresa volta a operar em minutos.
 								</p>
@@ -161,9 +161,9 @@
 						<div class="col-sm-4 text-center text-lg-left">
 							<div class="services-box"   data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1500">
 								<img src="images/design-development.svg" alt="design-development" data-aos="zoom-in">
-								<h6 class="text-dark mb-3 mt-4 font-weight-medium">Documentação completa
+								<h6 class="text-dark mb-3 mt-4 font-weight-medium">Documentação Completa
 								</h6>
-								<p>Documentação de rede, iventário de equipamentos, manual de operação. Seja indepente.
+								<p>Analise de Consciência Situacional da Sua empresa.Documentação de rede, inventário de equipamentos, manual de operação.
 								</p>
 							</div>
 						</div>
@@ -175,7 +175,7 @@
 								<img src="images/digital-strategy.svg" alt="digital-strategy" data-aos="zoom-in">
 								<h6 class="text-dark mb-3 mt-4 font-weight-medium">Especialistas em Tecnologia
 								</h6>
-								<p>Nossa equipe de especialistas vai cuidar da segurança, manutenção e funcionamento da sua empresa.
+								<p>Nossa equipe de especialistas irá cuidar da segurança, manutenção e funcionamento da sua empresa.
 								</p>
 							</div>
 						</div>
@@ -192,7 +192,7 @@
 						<div class="col-sm-4 text-center text-lg-left">
 							<div class="services-box pb-lg-0" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1500">
 								<img src="images/growth-strategy.svg" alt="growth-strategy" data-aos="zoom-in">
-								<h6 class="text-dark mb-3 mt-4 font-weight-medium">Gerenciamento de usuários
+								<h6 class="text-dark mb-3 mt-4 font-weight-medium">Gerenciamento de Usuários
 								</h6>
 								<p>Tenha segurança! Apenas você e seus funcionários tem acesso a suas informações.
 								</p>
@@ -257,7 +257,7 @@
 								<img src="images/finished-project.svg" alt="Projetos implantados" class="mr-3">
 								<div>
 									<h4 class="font-weight-bold text-dark mb-0"><span class="fpVal">0</span></h4>
-									<h5 class="text-dark mb-0">Projetos implantados</h5>
+									<h5 class="text-dark mb-0">Projetos Implantados</h5>
 								</div>
 							</div>
 						</div>
@@ -275,13 +275,38 @@
 								<img src="images/our-blog-posts.svg" alt="Procedimentos internalizados" class="mr-3">
 								<div>
 									<h4 class="font-weight-bold text-dark mb-0"><span class="bPVal">0</span></h4>
-									<h5 class="text-dark mb-0">Procedimentos internalizados</h5>
+									<h5 class="text-dark mb-0">Procedimentos Internalizados</h5>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
 			</section>
+
+
+ 			<!-- <section class="clients pt-5 mt-5"  data-aos="fade-up" data-aos-offset="-400">
+				<div class="container">
+					<div class="row">
+						<div class="col-sm-12">
+							<div class="d-sm-flex justify-content-between align-items-center">
+								<img src="images/deloit.svg" alt="deloit" class="p-2 p-lg-0" data-aos="fade-down"  data-aos-offset="-400">
+								<img src="images/erricson.svg" alt="erricson" class="p-2 p-lg-0" data-aos="fade-up"  data-aos-offset="-400">
+								<img src="images/netflix.svg" alt="netflix" class="p-2 p-lg-0" data-aos="fade-down"  data-aos-offset="-400">
+								<img src="images/instagram.svg" alt="instagram" class="p-2 p-lg-0" data-aos="fade-up"  data-aos-offset="-400">
+								<img src="images/coinbase.svg" alt="coinbase" class="p-2 p-lg-0" data-aos="fade-down"  data-aos-offset="-400">
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<br />
+			<br />
+			<br />
+			<br />
+			<br /> --> 
+			
+
+
 			<section class="testimonial" id="testimonial">
 				<div class="container">
 					<div class="row  mt-md-0 mt-lg-4">
@@ -345,29 +370,9 @@
 				</div>
 			</section>
 		
-			<!-- <section class="clients pt-5 mt-5"  data-aos="fade-up" data-aos-offset="-400">
-				<div class="container">
-					<div class="row">
-						<div class="col-sm-12">
-							<div class="d-sm-flex justify-content-between align-items-center">
-								<img src="images/deloit.svg" alt="deloit" class="p-2 p-lg-0" data-aos="fade-down"  data-aos-offset="-400">
-								<img src="images/erricson.svg" alt="erricson" class="p-2 p-lg-0" data-aos="fade-up"  data-aos-offset="-400">
-								<img src="images/netflix.svg" alt="netflix" class="p-2 p-lg-0" data-aos="fade-down"  data-aos-offset="-400">
-								<img src="images/instagram.svg" alt="instagram" class="p-2 p-lg-0" data-aos="fade-up"  data-aos-offset="-400">
-								<img src="images/coinbase.svg" alt="coinbase" class="p-2 p-lg-0" data-aos="fade-down"  data-aos-offset="-400">
-							</div>
-						</div>
-					</div>
-				</div>
-			</section>
-
 			
-			<br />
-			<br />
-			<br />
-			<br />
-			<br /> -->
 			
+		
 			
 		</div>
 		<footer class="footer">
